# Pakistani-lawyer

./: .gitignore  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  ISSUE_FIXED.md  MEMORY_SUMMARY.md  QUICKSTART.md  QUICKSTART_DEPLOY.md  README.md  STREAMING_MEMORY_GUIDE.md  UPDATE_SUMMARY.md  agent.py  api.py  api_with_memory.py  config.py  conversation_memory.py  data_ingestion.py  deploy_check.py  docker-compose.yml  lawyer_directory.py  main.py  pyproject.toml  requirements.txt  requirements_streamlit.txt  retriever.py  start.py  test_bilingual.py  test_conversation.py  test_language_matching.py  test_lawyer_directory.py  test_memory_complete.py  test_system.py  ui.py  ui_with_memory.py  vector_store.py
.streamlit/: config.toml
